infra/k8s/base/service-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: blakpath-app
  namespace: blakpath
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: blakpath-app
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blakpath
  namespace: blakpath
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /api/ready
    alb.ingress.kubernetes.io/inbound-cidrs: 173.245.48.0/20,103.21.244.0/22,103.22.200.0/22,103.31.4.0/22,141.101.64.0/18,108.162.192.0/18,190.93.240.0/20,188.114.96.0/20,197.234.240.0/22,198.41.128.0/17,162.158.0.0/15,104.16.0.0/13,104.24.0.0/14,172.64.0.0/13,131.0.72.0/22,2400:cb00::/32,2606:4700::/32,2803:f800::/32,2405:b500::/32,2405:8100::/32,2a06:98c0::/29,2c0f:f248::/32
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: blakpath.yumait.au
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blakpath-app
                port:
                  number: 80
